<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/settings"
        android:icon="@drawable/menu"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
    <item android:id="@+id/action_fileUpload"
        android:icon="@drawable/profilenew"
        android:title="@string/action_GoToFileUpload"
        android:orderInCategory="101"
        app:showAsAction="always"/>

    <item android:id="@+id/action_address"
        android:title="@string/action_address"
        android:orderInCategory="101"
        app:showAsAction="never"
        android:icon="@drawable/edit"/>
    <item android:id="@+id/action_5KM"
        android:title="@string/action_5KM"
        android:icon="@drawable/map_icon"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_10KM"
        android:title="@string/action_10KM"
        android:icon="@drawable/map_icon"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_15KM"
        android:icon="@drawable/map_icon"
        android:title="@string/action_15KM"
        android:orderInCategory="101"
        app:showAsAction="always" />
    <item android:id="@+id/action_logout"
        android:title="@string/action_Logout"
        android:icon="@drawable/logoutnew"
        android:orderInCategory="101"
        app:showAsAction="always" />

        </menu>
    </item>
</menu>
