<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/settings"
        android:icon="@drawable/menu"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_maps"
                android:icon="@drawable/directions"
                android:title="@string/title_activity_maps"
                android:orderInCategory="101"
                app:showAsAction="always"/>

            <item android:id="@+id/action_logout"
                android:title="@string/action_Logout"
                android:icon="@drawable/logout"
                android:orderInCategory="101"
                app:showAsAction="always" />

        </menu>
    </item>

</menu>